# HetinProject

./: CMakeLists.txt  CMakeSettings.json  Camera.h  Cannon.h  Clouds.h  ColorPalete.h  Console.h  Enemy.h  EnemyPlane.h  EnemySpawner.h  HetinProject.cpp  HetinProject.h  HotMemory.h  IDamageable.h  Input.h  LICENSE  Menu.h  Object.h  Observer.h  ParticleSystem.h  PhysicsComponent.h  Player.h  Projectiles.h  README.md  Scene.h  Score.h  Settings.h  ShootPatterns.h  SpriteRendererComponent.h  TextRenderer.h  TextureManager.h  Time.h  Transform.h  game.h  main.cpp  main.h  vector.h
Experimental/: PooledObserver.cpp  PooledObserver.h
assets/sprites/: Sprite-0001.aseprite  ase_frontclouds.aseprite  background_clouds.aseprite  boom.aseprite  ship.aseprite
components/: Achivement.h
include/: CollisionSystem.h  Component.h  GameObject.h  GenericPool.h  Object.h  Physics2D.h  SDL_Audio.h  ScreenHandleler.cpp  ScreenHandleler.h
include/Collisions/: ColliderComponent.h  Colliders.h  CollidersManager.h  Layers.h
libs/: Copyable.h  Dictionary.h  Math.h  MyString.h  Random.h  Vector2.h  readOnly.h
src/: AchivementSystem.h  Camera.h  Cannon.h  Clouds.h  ColorPalete.h  Enemy.h  EnemyPlane.h  EnemySpawner.h  HotMemory.h  Input.h  Menu.h  Observer.cpp  Observer.h  PhysicsComponent.h  Player.h  Projectiles.h  Scene.h  Settings.h  SpriteRendererComponent.h  TextRenderer.h  TextureManager.h  Time.h  Transform.h  game.h  main.cpp  vector.h
src/include/: CollisionSystem.h  Component.h  GenericPool.h  Math.h  MonoBechaviour.h  Object.h  Physics2D.h  SDL_Audio.h  ScreenHandleler.cpp  ScreenHandleler.h
src/include/Collisions/: ColliderComponent.h  Colliders.h  Layers.h
tests/: copyableTest.cpp  tests.h
